fixed z-index logo link overlap

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -4,15 +4,15 @@ form[class=post-comments] input::-webkit-input-placeholder {
 }
 
 form[class=post-comments] input:-moz-placeholder { /* Firefox 18- */
-   color: #000 !important;  
+   color: #000 !important;
 }
 
 form[class=post-comments] input::-moz-placeholder {  /* Firefox 19+ */
-   color: #000!important;  
+   color: #000!important;
 }
 
-form[class=post-comments] input:-ms-input-placeholder {  
-   color: #000 !important;  
+form[class=post-comments] input:-ms-input-placeholder {
+   color: #000 !important;
 }
 
 form[class=post-comments] input{
@@ -120,7 +120,7 @@ a:hover.follow-text{
   margin-top:1.2em;
   margin-bottom:0.8em;
 }
-  
+
 .fade-out {
   position: relative;
   white-space: nowrap;
@@ -251,7 +251,7 @@ a.string-url{
   position: absolute;
   bottom: -100%;
   height: calc(100% - 50px) ;
-  width: 100%;  
+  width: 100%;
   background: black;
   color: white;
   opacity:0.7;
@@ -278,7 +278,7 @@ a.string-url{
 }
 
 .post-body-photo .photo {
-  
+
 }
 
 .post-body-photo .photo img {
@@ -341,6 +341,8 @@ font-size:17px;
   background-color: black;
   opacity:0.8;
   height:100%;
+  position: relative;
+  z-index: 1000;
 }
 
 #admin-button{
@@ -351,7 +353,7 @@ font-size:17px;
   clear:left;
   /*width: 76px;*/
   width: 133px;
-
+  z-index: -1;
 }
 
 #tab{
@@ -374,7 +376,7 @@ cursor: pointer;
 }
 
 #admin-button{
-  
+
   }
 #admin-title{
   font-size:50px;
